fix: fixing some error and giving advices