@@ -9,8 +9,10 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 
+import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 
 @Configuration
 @Profile("test")
@@ -24,13 +26,13 @@ public class TestConfig implements CommandLineRunner {
 
     @Override
     public void run(String... args) throws Exception{
-        Client c1 = new Client(null, "Pc The One", "12982228898", "pctheone@email.com", "00000000001", "O Melhorzin que tá tendo",new Date());
-        Client c2 = new Client(null, "Martins Luis", "61982456789", "martinsLuis@email.com", "00000000002", "Garoto Prodigio",new Date());
-        Client c3 = new Client(null, "Dropp", "11987654321", "dropp@email.com", "00000000003", "O Brabo do React", new Date());
+        Client c1 = new Client(null, "Pc The One", "12982228898", "pctheone@email.com", "00000000001", "O Melhorzin que tá tendo", LocalDate.now());
+        Client c2 = new Client(null, "Martins Luis", "61982456789", "martinsLuis@email.com", "00000000002", "Garoto Prodigio",LocalDate.now());
+        Client c3 = new Client(null, "Dropp", "11987654321", "dropp@email.com", "00000000003", "O Brabo do React", LocalDate.now());
 
-        Employee e1 = new Employee(null, "Random", "11984567121", "random@email.com", "senhaFuncionario", "Dev", 3700.00, "Nosso Latera", new Date(), null);
+        Employee e1 = new Employee(null, "Random", "11984567121", "random@email.com", "senhaFuncionario", "Dev", 3700.00, "Nosso Latera", LocalDate.now(), null);
 
         clientRepository.saveAll(Arrays.asList(c1, c2, c3));
-        employeeRepository.saveAll(Arrays.asList(e1));
+        employeeRepository.saveAll(List.of(e1)); // List.of() no lugar de asList() pois temos apenas um parâmetro sendo passado
     }
 }
